--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=Think Toilet Server
+spring.datasource.url=jdbc:mysql://localhost:3306/thinktoilet?serverTimezone=Europe/Lisbon&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.output.ansi.enabled=ALWAYS
+server.error.include-message=ALWAYS
+server.port=8081
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
