--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ThinkToiletServer
-spring.datasource.url=jdbc:mysql://localhost:3306/thinktoilet?serverTimezone=Europe/Lisbon&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:${MYSQL_URL}
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
