Adiciona autenticação por chave API e suporte para upload e recuperação de imagens de banheiros
Rebase dos commits:
- WIP
- WIP
- WIP

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=ThinkToiletServer
 spring.datasource.url=jdbc:${MYSQL_URL}
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
+API_KEY_ADMIN=${API_KEY_ADMIN}
+API_KEY_USER=${API_KEY_USER}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
